k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sprint
  namespace: sprint
  labels:
    app: sprint
spec:
  selector:
    app: sprint
  ports:
    - name: http
      port: 80
      targetPort: 3000
  type: ClusterIP
